3.0.60.alpha.1 - 22nd November 2022
- Updated for game version 3.4.1 (currently on the PTR).
- These options have been updated for 3.4.1: Resize quest text, Resize mail text, Resize book text, Hide chat buttons, Restore chat messages, Show flight times.

3.0.59 - 22nd November 2022
- Updated 'Sell junk automatically' ('Automation') internal code.
- Fixed a rare and situational Lua error with 'Restore chat messages' ('Chat').

3.0.58 - 22nd November 2022
- Added flight times.

3.0.57 - 18th November 2022
- Added flight times.

3.0.56 - 16th November 2022
- Fixed the profession frames.
- Added flight times.

3.0.55 - 16th November 2022
- Due to problems with Blizzard's code in Wrath of the Lich King Classic, the taller quest log setting (part of 'Enhance quest log') has been removed.
- Updated LibDBIcon, LibChatAnims and LibCandyBar.
- Added flight times.

3.0.54 - 14th November 2022
- Added flight times.

3.0.53 - 10th November 2022
- Added flight times.

3.0.52 - 9th November 2022
- Added flight times.

3.0.51 - 7th November 2022
- If you use the Glass addon, some chat settings will now be locked out of Leatrix Plus in order to ensure that the addon loads correctly.
- Added flight times.

3.0.50 - 6th November 2022
- For addon authors, the enhanced minimap combined button frame now has a global reference of LeaPlusGlobalMinimapCombinedButtonFrame.
- Added flight times.

3.0.49 - 5th November 2022
- Added flight times.

3.0.48 - 2nd November 2022
- Added flight times.

3.0.47 - 31st October 2022
- Added flight times.

3.0.46 - 29th October 2022
- Added flight times.

3.0.45 - 28th October 2022
- Added flight times.

3.0.44 - 27th October 2022
- Added flight times.

3.0.43 - 26th October 2022
- Added flight times.

3.0.42 - 25th October 2022
- Added flight times.

3.0.41 - 24th October 2022
- Added flight times.

3.0.40 - 23rd October 2022
- Added flight times.

3.0.39 - 22nd October 2022